Fixed Popup updateTime CSS, empty queues collapsing all queues.

--- a/css/GWN-RealTime.css
+++ b/css/GWN-RealTime.css
@@ -34,7 +34,7 @@ img {vertical-align: text-top}
 .loading {opacity:0.7;background-image: url('/images/ajax-loader.gif');background-position: center center;background-repeat: no-repeat;background-size:34px; width: inherit; height: 50px}
 .margin {margin-bottom: 5px !important}
 .notes::-webkit-scrollbar {border:1px solid #ccc}
-.notes {opacity:0.55;xxxcolor:#777;cursor:pointer;white-space:normal;overflow-x:hidden;overflow-y:auto;xxoverflow:hidden;xxoverflow-x:hidden;xxoverflow-y:auto}
+.notes {opacity:0.55;color:#777;cursor:pointer;white-space:normal;overflow:hidden}
 .notes.scrollbars  {opacity:1}
 .optionsIcon {opacity:0.4;background-image: url('/images/options.png');background-position: 3px 3px;background-size: 16px}
 .padded {padding: 2px 4px 2px 4px}
@@ -42,7 +42,7 @@ img {vertical-align: text-top}
 .queue, .queueLabelAreaWrapper {border-radius:6px 0 0 0}
 .queueLabelArea, .ticketDetails {overflow:hidden;white-space:nowrap;margin-right:3px;margin-top:3px}
 .queueLabelAreaWrapper {background-color: #593E7F; color: #FFF}		
-.queueLabelArea, .hastickets {font-weight:bold}
+.queueLabelArea, .hastickets {font-weight:bold;width: 95%; position: relative}
 .queueLabelAreaWrapper:hover, .queueFor {text-shadow:1px 1px 3px #555}		
 .queueLabelAreaWrapper:hover {cursor:pointer;}
 .queuewrapper {margin-right:2px}
@@ -60,8 +60,8 @@ img {vertical-align: text-top}
 .ticket.hideScrollbars .notes::-webkit-scrollbar-thumb {background:none;-webkit-box-shadow:none}
 .ticketDetails {border-radius:3px}
 .ticketDetails:hover {cursor:pointer}
-.timeTopRight {z-index:5;white-space:nowrap;position:fixed;right:8px;padding-left:10px;opacity:1.00;margin-top:3px;font-weight:normal;font-size:xx-small;xxxbackground-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.1, rgb(245,	245, 245) ), color-stop(0.8, rgb(255, 255, 255) ) );}
-.ticketDetailsTopRight {z-index:5;white-space:nowrap;position:absolute;top:-2px;right:0px;padding-left:10px;xxfont-weight:bold;xxxbackground-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.1, rgb(245,	245, 245) ), color-stop(0.8, rgb(255, 255, 255) ) );}
+.timeTopRight {z-index:5;white-space:nowrap;position:absolute;right:0;;opacity:1.00;margin-top:3px;font-weight:normal;font-size:xx-small;}
+.ticketDetailsTopRight {z-index:5;white-space:nowrap;position:absolute;top:-2px;right:0px;padding-left:10px;font-weight:bold;background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.1, rgb(245,	245, 245) ), color-stop(0.8, rgb(255, 255, 255) ) );}
 .ticketDetailsTopRight .date {padding-right:3px}
 .upArrow, .downArrow {opacity:0.6;display:none;position:absolute;left:44%;width:0;height:0;border-left:50px solid transparent;border-right:50px solid transparent}
 .upArrow {border-bottom:10px solid #ccc;margin-bottom:-10px;opacity:0.4}
@@ -74,7 +74,7 @@ img {vertical-align: text-top}
 #scrollArea {left:0;position:absolute;width:2200px}
 #header {float:left;margin:3px 0 0 3px}
 #logo {display:none;width:32px;margin-top:-8px}		
-#title {color: #666;font-size: 110%;font-weight: bold;text-decoration: none;xxtext-shadow: 1px 1px 1px #000;xxxletter-spacing: 1px;}
+#title {color: #666;font-size: 110%;font-weight: bold;text-decoration: none;text-shadow: 1px 1px 1px #A7A7A7;letter-spacing: 1px;}
 #title:focus {outline:none}
 #title:hover {text-decoration:underline}
 .message{
